Ajustado menu convidados.
